--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.453.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
+    "react-ascii-text": "^0.0.4",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
